demo-app flex-gap bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@
 
 /* reset rule */
 
-body {}
+.frame {
+    max-width: 1040px;
+}
 
 /* nav */
 nav {
@@ -51,10 +53,9 @@ nav a {
 }
 
 .container {
-
     display: flex;
     flex-direction: column;
-    row-gap: 15px;
+    gap: 20px;
 }
 
 .light-rounded-box {
@@ -398,7 +399,7 @@ footer a {
     }
 
     #demo-app .light-rounded-box {
-        width: calc(100%/3);
+        width: calc(100%/3 - 20px / 3*2);
 
     }
 
@@ -408,7 +409,7 @@ footer a {
         display: flex;
         flex-direction: row;
         text-align: left;
-        width: calc(100%/3*2);
+        width: calc(100%/3*2 - 20px/ 3*1);
         padding: 40px 30px 0px 30px;
         border-radius: 30px;
         background-color: #b5ddff;
@@ -450,3 +451,6 @@ footer a {
 /* ------------------------------- */
 /* --------end over 992px -------- */
 /* ------------------------------- */
+
+
+@media screen and (min-width: 1200px) {}
